feat: add detailed AI disclaimer to footer and localization files

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -11,6 +11,7 @@
   "ai": "KI",
   "ai-configuration": "AI Konfiguration",
   "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen",
+  "ai-disclaimer-detailed": "Source Taster nutzt KI. Ergebnisse können Fehler enthalten – bitte vor wissenschaftlicher Nutzung überprüfen.",
   "ai-extraction": "KI-Extraktion",
   "ai-model": "KI-Modell",
   "ai-model-description": "Wählen Sie das KI-Modell für die Extraktion verwendet werden soll.",
@@ -311,12 +312,12 @@
   "field-format": "Format",
   "field-inPress": "Im Druck",
   "field-institution": "Institution",
-  "field-isStandAlone": "Eigenständiges Werk",
   "field-isbn": "ISBN",
   "field-issn": "ISSN",
+  "field-isStandAlone": "Eigenständiges Werk",
   "field-issue": "Ausgabe",
-  "field-issuePrefix": "Ausgabe-Präfix",
   "field-issued": "Publikationsdatum",
+  "field-issuePrefix": "Ausgabe-Präfix",
   "field-keywords": "Schlüsselwörter",
   "field-language": "Sprache",
   "field-license": "Lizenz",
@@ -331,8 +332,8 @@
   "field-originalLanguage": "Originalsprache",
   "field-originalTitle": "Originaltitel",
   "field-page-type": "Seitentyp",
-  "field-pageType": "Seitentyp",
   "field-pages": "Seiten",
+  "field-pageType": "Seitentyp",
   "field-paragraphNumber": "Absatznummer",
   "field-peerReviewed": "Peer-Review",
   "field-pmcid": "PMC ID",
@@ -801,13 +802,13 @@
   "tooltip-format": "Dateiformat oder Medientyp der Publikation (z.B. 'PDF', 'HTML', 'print')",
   "tooltip-inPress": "Publikation ist angenommen, aber noch nicht veröffentlicht (z.B. 'true')",
   "tooltip-institution": "Akademische Institution, die mit dem Werk verbunden ist (z.B. 'Harvard University', 'Max Planck Institute')",
-  "tooltip-isStandAlone": "Ob es sich um ein eigenständiges Werk handelt oder Teil einer Serie (z.B. 'true' für Monographie)",
   "tooltip-isbn": "Internationale Standardbuchnummer für Bücher (z.B. '978-3-16-148410-0')",
   "tooltip-issn": "Internationale Standardnummer für Periodika (z.B. '1234-5678')",
+  "tooltip-isStandAlone": "Ob es sich um ein eigenständiges Werk handelt oder Teil einer Serie (z.B. 'true' für Monographie)",
   "tooltip-issue": "Ausgabennummer innerhalb eines Bands (z.B. '3', 'Special Issue')",
   "tooltip-issue-prefix": "Präfix für die Ausgabennummerierung (z.B. 'No.')",
-  "tooltip-issuePrefix": "Präfix für Ausgabe (z.B. 'No.')",
   "tooltip-issued": "Datum, an dem die Publikation offiziell veröffentlicht wurde (z.B. '2024-05-15')",
+  "tooltip-issuePrefix": "Präfix für Ausgabe (z.B. 'No.')",
   "tooltip-keywords": "Schlüsselwörter oder Tags, die mit der Publikation verbunden sind (z.B. 'machine learning, AI, neural networks')",
   "tooltip-language": "Sprache, in der die Publikation verfasst ist (z.B. 'en', 'de', 'fr')",
   "tooltip-license": "Lizenz, unter der das Werk veröffentlicht ist (z.B. 'CC BY 4.0', 'MIT')",
@@ -821,8 +822,8 @@
   "tooltip-originalLanguage": "Originalsprache des Werks (für Übersetzungen)",
   "tooltip-originalTitle": "Originaltitel (für übersetzte Werke) - wichtig für deutsche Zitationsstile",
   "tooltip-page-type": "Art der Seitennummerierung (z.B. 'arabic', 'roman', 'letter')",
-  "tooltip-pageType": "Art der Seitenverweis (z.B. 'pp.' oder 'p.')",
   "tooltip-pages": "Seitenzahlen, auf denen der Artikel erscheint (z.B. '123-145', 'pp. 67-89')",
+  "tooltip-pageType": "Art der Seitenverweis (z.B. 'pp.' oder 'p.')",
   "tooltip-paragraph-number": "Spezifische Absatznummer-Referenz (z.B. '¶ 15', 'para. 3')",
   "tooltip-paragraphNumber": "Absatznummer für Quellen ohne Seitenzahlen",
   "tooltip-peerReviewed": "Ob das Werk ein Peer-Review durchlaufen hat (z.B. 'true', 'false')",
