--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -11,6 +11,7 @@
   "ai": "AI",
   "ai-configuration": "AI Configuration",
   "ai-description": "Enable and configure AI-powered functionality",
+  "ai-disclaimer-detailed": "Source Taster uses AI to extract and match references. Results may contain errors. Please verify accuracy before using them in academic work.",
   "ai-extraction": "AI Extraction",
   "ai-model": "AI Model",
   "ai-model-description": "Select the AI model to be used for the extraction.",
@@ -311,12 +312,12 @@
   "field-format": "Format",
   "field-inPress": "In Press",
   "field-institution": "Institution",
-  "field-isStandAlone": "Is Standalone",
   "field-isbn": "ISBN",
   "field-issn": "ISSN",
+  "field-isStandAlone": "Is Standalone",
   "field-issue": "Issue",
-  "field-issuePrefix": "Issue Prefix",
   "field-issued": "Publication Date",
+  "field-issuePrefix": "Issue Prefix",
   "field-keywords": "Keywords",
   "field-language": "Language",
   "field-license": "License",
@@ -331,8 +332,8 @@
   "field-originalLanguage": "Original Language",
   "field-originalTitle": "Original Title",
   "field-page-type": "Page Type",
-  "field-pageType": "Page Type",
   "field-pages": "Pages",
+  "field-pageType": "Page Type",
   "field-paragraphNumber": "Paragraph Number",
   "field-peerReviewed": "Peer Reviewed",
   "field-pmcid": "PMC ID",
@@ -801,13 +802,13 @@
   "tooltip-format": "File format or media type of the publication (e.g. 'PDF', 'HTML', 'print')",
   "tooltip-inPress": "Publication is accepted but not yet published (e.g. 'true')",
   "tooltip-institution": "Academic institution associated with the work (e.g. 'Harvard University', 'Max Planck Institute')",
-  "tooltip-isStandAlone": "Whether this is a standalone work (e.g. 'true' for monographs)",
   "tooltip-isbn": "International Standard Book Number for books (e.g. '978-3-16-148410-0')",
   "tooltip-issn": "International Standard Serial Number for periodicals (e.g. '1234-5678')",
+  "tooltip-isStandAlone": "Whether this is a standalone work (e.g. 'true' for monographs)",
   "tooltip-issue": "Issue number within a volume (e.g. '3', 'Special Issue')",
   "tooltip-issue-prefix": "Prefix for issue numbering (e.g. 'No.')",
-  "tooltip-issuePrefix": "Prefix for issue (e.g., 'No.')",
   "tooltip-issued": "Date when the publication was officially released (e.g. '2024-05-15')",
+  "tooltip-issuePrefix": "Prefix for issue (e.g., 'No.')",
   "tooltip-keywords": "Keywords or tags associated with the publication (e.g. 'machine learning, AI, neural networks')",
   "tooltip-language": "Language in which the publication is written (e.g. 'en', 'de', 'fr')",
   "tooltip-license": "License under which the work is published (e.g. 'CC BY 4.0', 'MIT')",
@@ -821,8 +822,8 @@
   "tooltip-originalLanguage": "Original language of the work (for translations)",
   "tooltip-originalTitle": "Original title (for translated works) - important for German citation styles",
   "tooltip-page-type": "Type of page numbering (e.g. 'arabic', 'roman', 'letter')",
-  "tooltip-pageType": "Type of page reference (e.g., 'p.' or 'pp.')",
   "tooltip-pages": "Page numbers where the article appears (e.g. '123-145', 'pp. 67-89')",
+  "tooltip-pageType": "Type of page reference (e.g., 'p.' or 'pp.')",
   "tooltip-paragraph-number": "Specific paragraph number reference (e.g. '¶ 15', 'para. 3')",
   "tooltip-paragraphNumber": "Paragraph number for sources without page numbers",
   "tooltip-peerReviewed": "Whether the work underwent peer review (e.g. 'true', 'false')",
