feat: add additional localization keys for enhanced metadata support in English and German

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -872,5 +872,83 @@
   "year": "Jahr",
   "year-match": "Jahr-Übereinstimmung",
   "year-suffix": "Jahr-Suffix",
-  "yes": "Ja"
+  "yes": "Ja",
+  "accessed": "Zugriffsdatum",
+  "annote": "Anmerkung",
+  "archive": "Archiv",
+  "archive-collection": "Archivsammlung",
+  "archive-location": "Archivstandort",
+  "archive-place": "Archivort",
+  "authority": "Rechtliche Autorität",
+  "available-date": "Verfügbarkeitsdatum",
+  "call-number": "Signatur",
+  "categories": "Kategorien",
+  "chair": "Vorsitzender",
+  "chapter-number": "Kapitelnummer",
+  "citation-key": "Zitationsschlüssel",
+  "citation-label": "Zitationslabel",
+  "citation-number": "Zitationsnummer",
+  "collection-editor": "Sammlungsherausgeber",
+  "collection-number": "Sammlungsnummer",
+  "collection-title": "Sammlungstitel",
+  "compiler": "Compiler",
+  "composer": "Komponist",
+  "container-author": "Container-Autor",
+  "container-title-short": "Container-Titel (Kurz)",
+  "contributor": "Mitwirkender",
+  "curator": "Kurator",
+  "custom": "Benutzerdefinierte Felder",
+  "dimensions": "Abmessungen",
+  "director": "Regisseur",
+  "division": "Abteilung",
+  "editorial-director": "Verlagsleiter",
+  "event": "Ereignis",
+  "event-date": "Ereignisdatum",
+  "event-place": "Ereignisort",
+  "event-title": "Ereignistitel",
+  "executive-producer": "Ausführender Produzent",
+  "first-reference-note-number": "Erste Referenznotennummer",
+  "genre": "Genre",
+  "guest": "Gast",
+  "host": "Gastgeber",
+  "illustrator": "Illustrator",
+  "interviewer": "Interviewer",
+  "jurisdiction": "Gerichtsbarkeit",
+  "keyword": "Schlagwörter",
+  "locator": "Locator",
+  "narrator": "Erzähler",
+  "number": "Nummer",
+  "number-of-pages": "Seitenzahl",
+  "number-of-volumes": "Bandanzahl",
+  "organizer": "Organisator",
+  "original-author": "Ursprünglicher Autor",
+  "original-date": "Ursprüngliches Datum",
+  "original-publisher": "Ursprünglicher Verlag",
+  "original-publisher-place": "Ursprünglicher Verlagsort",
+  "page": "Seiten",
+  "page-first": "Erste Seite",
+  "part": "Teil",
+  "part-title": "Teiltitel",
+  "performer": "Darsteller",
+  "printing": "Auflage",
+  "producer": "Produzent",
+  "publisher-place": "Verlagsort",
+  "recipient": "Empfänger",
+  "references": "Referenzen",
+  "reviewed-author": "Rezensierter Autor",
+  "reviewed-genre": "Rezensiertes Genre",
+  "reviewed-title": "Rezensierter Titel",
+  "scale": "Maßstab",
+  "script-writer": "Drehbuchautor",
+  "section": "Abschnitt",
+  "series-creator": "Serienersteller",
+  "status": "Status",
+  "submitted": "Eingereicht am",
+  "supplement": "Supplement",
+  "title-short": "Titel (Kurz)",
+  "translator": "Übersetzer",
+  "type": "Typ",
+  "version": "Version",
+  "volume-title": "Bandtitel",
+  "volume-title-short": "Bandtitel (Kurz)"
 }
