--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -872,5 +872,83 @@
   "year": "Year",
   "year-match": "Year Match",
   "year-suffix": "Year Suffix",
-  "yes": "Yes"
+  "yes": "Yes",
+  "accessed": "Date Accessed",
+  "annote": "Annotation",
+  "archive": "Archive",
+  "archive-collection": "Archive Collection",
+  "archive-location": "Archive Location",
+  "archive-place": "Archive Place",
+  "authority": "Legal Authority",
+  "available-date": "Date Available",
+  "call-number": "Call Number",
+  "categories": "Categories",
+  "chair": "Chair",
+  "chapter-number": "Chapter Number",
+  "citation-key": "Citation Key",
+  "citation-label": "Citation Label",
+  "citation-number": "Citation Number",
+  "collection-editor": "Collection Editor",
+  "collection-number": "Collection Number",
+  "collection-title": "Collection Title",
+  "compiler": "Compiler",
+  "composer": "Composer",
+  "container-author": "Container Author",
+  "container-title-short": "Container Title (Short)",
+  "contributor": "Contributor",
+  "curator": "Curator",
+  "custom": "Custom Fields",
+  "dimensions": "Dimensions",
+  "director": "Director",
+  "division": "Division",
+  "editorial-director": "Editorial Director",
+  "event": "Event",
+  "event-date": "Event Date",
+  "event-place": "Event Place",
+  "event-title": "Event Title",
+  "executive-producer": "Executive Producer",
+  "first-reference-note-number": "First Reference Note Number",
+  "genre": "Genre",
+  "guest": "Guest",
+  "host": "Host",
+  "illustrator": "Illustrator",
+  "interviewer": "Interviewer",
+  "jurisdiction": "Jurisdiction",
+  "keyword": "Keywords",
+  "locator": "Locator",
+  "narrator": "Narrator",
+  "number": "Number",
+  "number-of-pages": "Number of Pages",
+  "number-of-volumes": "Number of Volumes",
+  "organizer": "Organizer",
+  "original-author": "Original Author",
+  "original-date": "Original Date",
+  "original-publisher": "Original Publisher",
+  "original-publisher-place": "Original Publisher Place",
+  "page": "Pages",
+  "page-first": "First Page",
+  "part": "Part",
+  "part-title": "Part Title",
+  "performer": "Performer",
+  "printing": "Printing",
+  "producer": "Producer",
+  "publisher-place": "Publisher Place",
+  "recipient": "Recipient",
+  "references": "References",
+  "reviewed-author": "Reviewed Author",
+  "reviewed-genre": "Reviewed Genre",
+  "reviewed-title": "Reviewed Title",
+  "scale": "Scale",
+  "script-writer": "Script Writer",
+  "section": "Section",
+  "series-creator": "Series Creator",
+  "status": "Status",
+  "submitted": "Date Submitted",
+  "supplement": "Supplement",
+  "title-short": "Title (Short)",
+  "translator": "Translator",
+  "type": "Type",
+  "version": "Version",
+  "volume-title": "Volume Title",
+  "volume-title-short": "Volume Title (Short)"
 }
