feat: add 'more fields' translation to enhance user interface clarity

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -388,6 +388,7 @@
   "field-yearSuffix": "Jahr-Suffix",
   "fields": "Felder",
   "first-reference-note-number": "Erste Referenznotennummer",
+  "more-fields": "weitere Felder",
   "flag-problematic": "Als problematisch markieren",
   "flag-problematic-tooltip": "Diese Referenz als möglicherweise problematisch kennzeichnen",
   "format-variations": "Formatvariationen",
