--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -388,6 +388,7 @@
   "field-yearSuffix": "Year Suffix",
   "fields": "Fields",
   "first-reference-note-number": "First Reference Note Number",
+  "more-fields": "more fields",
   "flag-problematic": "Flag as problematic",
   "flag-problematic-tooltip": "Mark this reference as potentially problematic",
   "format-variations": "Format Variations",
