feat: update common variable selection logic and improve UI translations

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -704,7 +704,7 @@
   "sec": "s",
   "section": "Abschnitt",
   "select-all": "Alle auswählen",
-  "select-essentials": "Wichtige auswählen",
+  "select-common": "Häufige auswählen",
   "series": "Serie",
   "series-creator": "Serienersteller",
   "series-number": "Seriennummer",
