--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -704,7 +704,7 @@
   "sec": "sec",
   "section": "Section",
   "select-all": "Select All",
-  "select-essentials": "Select Essentials",
+  "select-common": "Select Common",
   "series": "Series",
   "series-creator": "Series Creator",
   "series-number": "Series Number",
