feat: add 'deselect-common' option and update toggle logic for selection states

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -165,6 +165,7 @@
   "description": "Beschreibung",
   "description-match": "Beschreibung-Übereinstimmung",
   "deselect-all": "Alle abwählen",
+  "deselect-common": "Häufige abwählen",
   "details": "Details",
   "dimensions": "Abmessungen",
   "director": "Regisseur",
