--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -165,6 +165,7 @@
   "description": "Description",
   "description-match": "Description Match",
   "deselect-all": "Deselect All",
+  "deselect-common": "Deselect Common",
   "details": "",
   "dimensions": "Dimensions",
   "director": "Director",
