refactor: remove unused field category assignments and streamline weight configuration

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -698,6 +698,7 @@
   "search-and-verification": "Suche und Überprüfung",
   "search-and-verify": "Suche und Überprüfung",
   "search-and-verify-description": "Suche nach passenden Quellen und Prüfung der Referenzen...",
+  "search-fields": "Felder suchen...",
   "search-on-web": "Im Internet nach dieser Referenz suchen",
   "search-on-web-tooltip": "Im Internet nach dieser Referenz suchen",
   "search-references": "Referenzen suchen",
