--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -698,6 +698,7 @@
   "search-and-verification": "Search and verification",
   "search-and-verify": "Search and Verify",
   "search-and-verify-description": "Searching for matching sources and verifying references...",
+  "search-fields": "Search fields...",
   "search-on-web": "Search the internet for this reference",
   "search-on-web-tooltip": "",
   "search-references": "Search references",
