refactor: standardize normalization rules to lowercase and update related presets and translations

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -545,7 +545,7 @@
   "modification-type-identifier-standardization": "Kennung-Standardisierung",
   "modification-type-information-reconstruction": "Informations-Rekonstruktion",
   "modification-type-interpretation": "Interpretation",
-  "modification-type-normalize-title-case": "Großschreibung normalisieren",
+  "modification-type-normalize-lowercase": "Kleinschreibung normalisieren",
   "modification-type-ocr-error-correction": "OCR-Fehler-Korrektur",
   "modification-type-punctuation-standardization": "Interpunktions-Standardisierung",
   "modification-type-remove-artifacts": "Artefakte entfernen",
@@ -757,10 +757,10 @@
   "setting-normalize-identifiers-description": "Externe Identifikatoren (DOI, ISBN, ISSN, PMID, PMCID, ARXIV) zu einem einheitlichen Format standardisieren",
   "setting-normalize-identifiers-example": "\"https://doi.org/10.1000/xyz123\" → \"10.1000/xyz123\"",
   "setting-normalize-identifiers-short-description": "DOI, ISBN, etc. standardisieren",
-  "setting-normalize-title-case": "Titelschreibweise normalisieren",
-  "setting-normalize-title-case-description": "Großschreibung von Titeln, Namen und anderen Texten zu Standardformaten (Titelschreibweise) normalisieren",
-  "setting-normalize-title-case-example": "\"der schnelle braune fuchs\" → \"Der Schnelle Braune Fuchs\"",
-  "setting-normalize-title-case-short-description": "Großschreibung standardisieren",
+  "setting-normalize-lowercase": "Kleinschreibung normalisieren",
+  "setting-normalize-lowercase-description": "Alle Texte in Kleinschreibung umwandeln für konsistente Übereinstimmung (entfernt Groß-/Kleinschreibung)",
+  "setting-normalize-lowercase-example": "\"Der Schnelle Braune Fuchs\" → \"der schnelle braune fuchs\"",
+  "setting-normalize-lowercase-short-description": "In Kleinschreibung umwandeln",
   "setting-normalize-typography": "Typografie normalisieren",
   "setting-normalize-typography-description": "Häufige Kodierungsprobleme wie Anführungszeichen, Gedankenstriche und andere nicht-standardisierte Zeichen korrigieren",
   "setting-normalize-typography-example": "\"Anführungszeichen\" → \"Anführungszeichen\", \"—Gedankenstrich\" → \"-\"",
