--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -545,7 +545,7 @@
   "modification-type-identifier-standardization": "Identifier Standardization",
   "modification-type-information-reconstruction": "Information Reconstruction",
   "modification-type-interpretation": "Interpretation",
-  "modification-type-normalize-title-case": "Normalize Title Case",
+  "modification-type-normalize-lowercase": "Normalize to Lowercase",
   "modification-type-ocr-error-correction": "OCR Error Correction",
   "modification-type-punctuation-standardization": "Punctuation Standardization",
   "modification-type-remove-artifacts": "Remove Artifacts",
@@ -757,10 +757,10 @@
   "setting-normalize-identifiers-description": "Standardize external identifiers (DOI, ISBN, ISSN, PMID, PMCID, ARXIV) to a consistent format",
   "setting-normalize-identifiers-example": "\"https://doi.org/10.1000/xyz123\" → \"10.1000/xyz123\"",
   "setting-normalize-identifiers-short-description": "Standardize DOI, ISBN, etc.",
-  "setting-normalize-title-case": "Normalize Title Case",
-  "setting-normalize-title-case-description": "Normalize capitalization of titles, names, and other text to standard formats (Title Case)",
-  "setting-normalize-title-case-example": "\"the quick brown fox\" → \"The Quick Brown Fox\"",
-  "setting-normalize-title-case-short-description": "Standardize capitalization",
+  "setting-normalize-lowercase": "Normalize to Lowercase",
+  "setting-normalize-lowercase-description": "Convert all text to lowercase for consistent matching (removes case sensitivity)",
+  "setting-normalize-lowercase-example": "\"The Quick Brown Fox\" → \"the quick brown fox\"",
+  "setting-normalize-lowercase-short-description": "Convert to lowercase",
   "setting-normalize-typography": "Normalize Typography",
   "setting-normalize-typography-description": "Fix common encoding issues such as smart quotes, em dashes, and other non-standard characters",
   "setting-normalize-typography-example": "\"Smart quotes\" → \"Smart quotes\", \"—em dash\" → \"-\"",
