refactor: add normalization settings for accents, umlauts, punctuation, unicode, and URLs in localization files

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -769,6 +769,26 @@
   "setting-normalize-whitespace-description": "Leerzeichen normalisieren durch Entfernen doppelter Leerzeichen, führender/nachfolgender Leerzeichen, unnötiger Tabs und weicher Zeilenumbrüche",
   "setting-normalize-whitespace-example": "\"Das    ist ein  Test.\" → \"Das ist ein Test.\"",
   "setting-normalize-whitespace-short-description": "Abstände bereinigen",
+  "setting-normalize-accents": "Akzente normalisieren",
+  "setting-normalize-accents-description": "Diakritische Zeichen und Akzente für besseres Matching entfernen (z.B. naïve → naive)",
+  "setting-normalize-accents-example": "\"naïve café résumé\" → \"naive cafe resume\"",
+  "setting-normalize-accents-short-description": "Diakritische Zeichen entfernen",
+  "setting-normalize-umlauts": "Umlaute normalisieren",
+  "setting-normalize-umlauts-description": "Deutsche und europäische Sonderzeichen in ASCII-Äquivalente umwandeln",
+  "setting-normalize-umlauts-example": "\"Müller Schrödinger über\" → \"Mueller Schroedinger ueber\"",
+  "setting-normalize-umlauts-short-description": "Umlaute in ASCII umwandeln",
+  "setting-normalize-punctuation": "Satzzeichen normalisieren",
+  "setting-normalize-punctuation-description": "Satzzeichen für besseres Textmatching normalisieren durch Entfernen der meisten Symbole außer Buchstaben, Zahlen und grundlegender Interpunktion",
+  "setting-normalize-punctuation-example": "\"COVID-19: Studie, Ergebnisse & Analyse!\" → \"COVID-19 Studie Ergebnisse Analyse\"",
+  "setting-normalize-punctuation-short-description": "Satzzeichen bereinigen",
+  "setting-normalize-unicode": "Unicode normalisieren",
+  "setting-normalize-unicode-description": "Unicode-Normalisierung für konsistente Zeichendarstellung anwenden und unsichtbare Formatierungszeichen entfernen",
+  "setting-normalize-unicode-example": "Verschiedene Unicode-Darstellungen → einheitliche Form",
+  "setting-normalize-unicode-short-description": "Unicode-Kodierung standardisieren",
+  "setting-normalize-urls": "URLs normalisieren",
+  "setting-normalize-urls-description": "URLs für konsistenten Vergleich normalisieren durch Entfernen von Fragmenten, Standardisierung von Parametern und Bereinigung von Tracking-Daten",
+  "setting-normalize-urls-example": "\"https://example.com/page?utm_campaign=123#section\" → \"https://example.com/page\"",
+  "setting-normalize-urls-short-description": "URL-Format standardisieren",
   "setting-recognize-source-types": "Quellentypen erkennen",
   "setting-recognize-source-types-description": "Publikationstypen automatisch erkennen",
   "setting-recognize-source-types-example": "\"journal-article\" vs \"book\" erkennen",
