--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -769,6 +769,26 @@
   "setting-normalize-whitespace-description": "Normalize whitespace by removing duplicated spaces, leading/trailing spaces, unnecessary tabs, and soft line breaks",
   "setting-normalize-whitespace-example": "\"This    is a  test.\" → \"This is a test.\"",
   "setting-normalize-whitespace-short-description": "Clean up spacing",
+  "setting-normalize-accents": "Normalize Accents",
+  "setting-normalize-accents-description": "Remove diacritical marks and accents for better matching (e.g., naïve → naive)",
+  "setting-normalize-accents-example": "\"naïve café résumé\" → \"naive cafe resume\"",
+  "setting-normalize-accents-short-description": "Remove diacritical marks",
+  "setting-normalize-umlauts": "Normalize Umlauts",
+  "setting-normalize-umlauts-description": "Convert German and European special characters to ASCII equivalents",
+  "setting-normalize-umlauts-example": "\"Müller Schrödinger über\" → \"Mueller Schroedinger ueber\"",
+  "setting-normalize-umlauts-short-description": "Convert umlauts to ASCII",
+  "setting-normalize-punctuation": "Normalize Punctuation",
+  "setting-normalize-punctuation-description": "Normalize punctuation for better text matching by removing most symbols except letters, numbers, and basic punctuation",
+  "setting-normalize-punctuation-example": "\"COVID-19: Study, Results & Analysis!\" → \"COVID-19 Study Results Analysis\"",
+  "setting-normalize-punctuation-short-description": "Clean up punctuation",
+  "setting-normalize-unicode": "Normalize Unicode",
+  "setting-normalize-unicode-description": "Apply Unicode normalization for consistent character representation and remove invisible formatting characters",
+  "setting-normalize-unicode-example": "Different Unicode representations → consistent form",
+  "setting-normalize-unicode-short-description": "Standardize Unicode encoding",
+  "setting-normalize-urls": "Normalize URLs",
+  "setting-normalize-urls-description": "Normalize URLs for consistent comparison by removing fragments, standardizing parameters, and cleaning tracking data",
+  "setting-normalize-urls-example": "\"https://example.com/page?utm_campaign=123#section\" → \"https://example.com/page\"",
+  "setting-normalize-urls-short-description": "Standardize URL format",
   "setting-recognize-source-types": "Recognize Source Types",
   "setting-recognize-source-types-description": "Automatically detect publication types",
   "setting-recognize-source-types-example": "Detect \"journal-article\" vs \"book\"",
